# movies-list-api

./: Makefile  README.md  pyproject.toml  settings.yml  setup.cfg
.github/workflows/: pytest.yml
src/: app.py  config.py  database.py  models.py  repositories.py  services.py
src/utils/: enum.py
tests/: test_movies_list.py
