[tool.poetry]
name = "movies-list-api"
version = "0.1.0"
description = ""
authors = ["Pedro Link <pedrohplink@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flake8 = "^6.0.0"
pandas = "^2.0.0"
sqlalchemy = "^2.0.9"
pytest-json = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
